Corrected service description overflow (#563).

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -208,6 +208,12 @@ body {
     margin-bottom: 20px;
 }
 
+#book-appointment-wizard #service-description {
+    overflow-y: auto;
+    clear: both;
+    max-height: 153px;
+}
+
 /* BOOK SUCCESS & MESSAGE
    ------------------------------------------------------------------------- */
 #message-frame,
